--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-20  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* ssl.gpr:
+	(Ide): New package.
+
 2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* ssl-wrappers.ads, ssl-wrappers.adb:
