--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* generate.adb:
+	Get test list from command line.
+
 2003-12-31  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* strm.adb, strm.out:
