--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-utils.adb:
+	(Encode): Use Utils.Image instead of Utils.Dec.
+	Update copyright notice.
+
 2003-12-31  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-message-xml.ads:
