--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-03  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-utils.ads:
+	Minor reformatting.
+        Update copyright notice.
+
 2004-01-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-utils.adb:
