--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* generate.adb:
+	Remove DOS style CR at the end of line.
+
 2004-01-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* generate.adb:
