--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-05  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* templates_parser-filter.adb:
+	(Replace_All): Use Regpat.Match call compatible with GNAT 3.15p.
+        Update copyright notice.
+
 2003-12-23  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser-filter.adb:
