--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-06  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	Fix output problems introduced in previous check-in.
+	Put in UNIX format.
+
+	* generate.adb:
+	(Test): Update output. Cleaner.
+	
 2004-01-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
