--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-06  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Restore dropped OTH_TESTS.
+
 2004-01-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
