--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-07  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb:
+	(Socket_Hidden): Put original socket inside record. It is for shorter
+	 access (Socket.S.FD instead of SFD (Socket.S.all)) and prepear place
+	 for Socket_Set_Type for timeout implementation.
+
 2004-01-01  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-os_lib__gnat.adb:
