--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-07  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net.ads, aws-net.adb:
+	(Forever): New constant.
+	(Set_Timeout): New routine.
+	(Socket_Type): New field Timeout for keep read/write timeout.
+
 2004-01-06  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server.ads, aws-server.adb:
