--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-12  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net.ads, aws-net-std.ads:
+	(Get_Send_Buffer): Renamed to Get_Send_Buffer_Size.
+	(Get_Receive_Buffer): Renamed to Get_Receive_Buffer_Size.
+	(Set_Send_Buffer): Renamed to Set_Send_Buffer_Size.
+	(Set_Receive_Buffer): Renamed to Set_Receive_Buffer_Size.
+
 2004-01-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net.ads, aws-net-std.ads:
