--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* tlog.adb:
+	Auto_Flush server log for stable output in Linux.
+
 2004-01-13  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	dirop.out, dirop.tmplt, makefile:
