--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-15  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* tlog.adb:
+	Rollback previous modification, it does not help for stabilize linux
+	 output. No way to stabilize linux http log sequence, because server
+	 answering before writting to log.
+
 2004-01-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* tlog.adb:
