--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* demos.gpr:
+	(Languages): Add support for Ada, ChangeLog and Project files.
+	Rename Z_Lib to ZLib.
+
 2003-12-20  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws_directory.thtml:
