--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* include.gpr:
+	(zlib): Add this project.
+	(Languages): Add support for Ada, ChangeLog and Project files.
+
 2004-01-14  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser.adb:
