--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* src.gpr:
+	(Languages): Add support for Ada, ChangeLog and Project files.
+
 2004-01-12  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net.ads, aws-net-std.ads:
