--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-22  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(clean): Fix regexp to remove the Emacs temp files.
+
 2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
