--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-25  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* sessions.adb:
+	Change port.
+	(Server): Add exception handler.
+
 2004-01-22  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
