--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	Minor reformatting.
+
 2004-01-25  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* sessions.adb:
