--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-28  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* regtests.gpr:
+	Initial revision.
+
 	* auth.adb:
 	Minor reformatting.
         Update copyright notice.
