--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* eres.adb, sock2.adb:
+	Remove DOS style CR at end of line.
+
 2004-01-28  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* regtests.gpr:
