--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-29  Pascal Obry  <pascal.obry@edf.fr>
+
+	* makefile:
+	Minor reformatting.
+
 2004-01-27  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* include.gpr:
