--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-30  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(.SILENT): Simplify.
+
 2004-01-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-utils.ads:
