--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-30  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* src.gpr:
+	Add support for AWS library.
+	Update copyright notice.
+	(Limited_Debug_Switches): Add comment.
+
+	* makefile:
+	(.SILENT): Simplify.
+
 	* aws-containers-tables-set.ads:
 	Minor reformatting.
 	Update copyright notice.
